# deepspeech-server

./: .gitignore  Cargo.toml  Dockerfile.gpu  README.md  docker-compose.yaml
.circleci/: config.yml
src/: args.rs  http.rs  inference.rs  main.rs
