[package]
name = "ds-srv"
version = "0.3.0"
authors = ["Alexandre Lissy <lissyx@lissyx.dyndns.org>"]

[features]
default = []
dump_debug_stream = []

[dependencies]
deepspeech = "0.0.4"
audrey = "0.2"
clap = "2.31.2"
log = "0.4.1"
simplelog = "0.5.2"
hyper = "0.12.1"
futures = "0.1.21"
bytes = "0.4.8"
byte-slice-cast = "0.2.0"
serde = "1.0.66"
serde_derive = "1.0.66"
serde_json = "1.0.19"
mkstemp-rs = "1.0.0"
